(#) Checking for width and height size in image field when crop or resize is enabled (Issue #1445)

--- a/Site/usr/locale/site/en-GB.com_sobipro.err.ini
+++ b/Site/usr/locale/site/en-GB.com_sobipro.err.ini
@@ -19,6 +19,7 @@
 ; $Revision$
 ; $Author: SobiPro Translation Team at Transifex
 
+SP.IMG_FIELD_RESIZE_NO_SIZE="You enabled resize or crop option but you didn't provide the width and/or height"
 
 SP.TP.LESS_FILE_NOT_COMPILED="Could not compile LESS file. %s"
 
