--- a/Site/changelog.txt
+++ b/Site/changelog.txt
@@ -72,6 +72,7 @@ Legend:
     (#) Valid until reset after each edit (Issue #1452)
     (#) Wrong error code if page has not been found (Issue #1440)
     (#) Issues with image cropper while uploading same image (name) into two different fields (Issue #1431)
+    (#) Checking for width and height size in image field when crop or resize is enabled (Issue #1445)
 
 
 -------------------
