--- a/Site/changelog.txt
+++ b/Site/changelog.txt
@@ -73,6 +73,7 @@ Legend:
     (#) Wrong error code if page has not been found (Issue #1440)
     (#) Issues with image cropper while uploading same image (name) into two different fields (Issue #1431)
     (#) Checking for width and height size in image field when crop or resize is enabled (Issue #1445)
+    (#) Image handler is adding transparency to images that originally don't have it and removes the background
 
 
 -------------------
