--- a/Site/changelog.txt
+++ b/Site/changelog.txt
@@ -74,6 +74,7 @@ Legend:
     (#) Issues with image cropper while uploading same image (name) into two different fields (Issue #1431)
     (#) Checking for width and height size in image field when crop or resize is enabled (Issue #1445)
     (#) Image handler is adding transparency to images that originally don't have it and removes the background
+    (#) Permission "to access any unpublished entry" is being overriden by the permission to access own unpublished entries (Issue #1439)
 
 
 -------------------
