--- a/Site/changelog.txt
+++ b/Site/changelog.txt
@@ -76,6 +76,7 @@ Legend:
     (#) Image handler is adding transparency to images that originally don't have it and removes the background
     (#) Permission "to access any unpublished entry" is being overridden by the permission to access own unpublished entries (Issue #1439)
     (#) Information messages don't appear on redirection to non-SobiPro URLs (Issue #1366)
+    (#) Second search ordering by counter doesn't work (Issue #1495)
 
 
 -------------------
