(+) Possibility to switch the field label off in entry form     (+) Possibility to add the label as placeholder into the input element for inbox, textarea (not Wysiwyg), email and url fields

--- a/Site/usr/locale/adm/en-GB.com_sobipro.ini
+++ b/Site/usr/locale/adm/en-GB.com_sobipro.ini
@@ -15,6 +15,8 @@
 ; This program is distributed in the hope that it will be useful, but WITHOUT ANY WARRANTY; without even the implied warranty of
 ; MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. See the GNU General Public License for more details.
 
+
+SP.FM.SHOW_PLACEHOLDER="Show Placeholder"
 SP.FM.URL.NOFOLLOW="Add nofollow"
 SP.TB.COMPILESAVE="Compile & Save"
 SP.TB.COMPILE="Compile"
