--- a/Site/usr/locale/site/en-GB.com_sobipro.ini
+++ b/Site/usr/locale/site/en-GB.com_sobipro.ini
@@ -1,4 +1,3 @@
-; @version: $Id$
 ; @package: SobiPro Component for Joomla!
 
 ; @author
@@ -15,10 +14,8 @@
 ; This program is distributed in the hope that it will be useful, but WITHOUT ANY WARRANTY; without even the implied warranty of
 ; MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. See the GNU General Public License for more details.
 
-; $Date$
-; $Revision$
-; $Author$
-; $HeadURL$
+
+SP.FD.URL_ADDRESS="URL address"
 
 SP.IMAGE_UPLOADED_CROP="File \"%s\" has been uploaded. Click on the image preview to change the visible area."
 SP.IMAGE_CROP_HEADER="Crop Image"
