--- a/Site/changelog.txt
+++ b/Site/changelog.txt
@@ -42,6 +42,8 @@ Legend:
     (+) New default template (default3)
     (+) Different default class selectors for fields
     (+) Nofollow attribute for url field
+    (+) Possibility to switch the field label off in entry form
+    (+) Possibility to add the label as placeholder into the input element for inbox, textarea (not Wysiwyg), email and url fields
 
     (!) Template styles from SobiPro.css moved to template's css file
     (!) New tree icons
