Implementing settings for template. Form, storage done

--- a/Site/usr/locale/adm/en-GB.com_sobipro.ini
+++ b/Site/usr/locale/adm/en-GB.com_sobipro.ini
@@ -15,6 +15,13 @@
 ; This program is distributed in the hope that it will be useful, but WITHOUT ANY WARRANTY; without even the implied warranty of
 ; MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. See the GNU General Public License for more details.
 
+SP.TP.SETTINGS="Template Settings"
+SP.TP.CONFIG_SITE_TITLE="Template Settings of 'var:[template]'"
+SP.TP.CONFIG.ENTRY_FORM_CSS_CLASS="Entry Form Class"
+SP.TP.CONFIG.ENTRY_FORM_CSS_CLASS_VERTICAL="Vertical"
+SP.TP.CONFIG.ENTRY_FORM_CSS_CLASS_HORIZONTAL="Horizontal"
+SP.TP.SETTINGS_SAVED="Template configuration has been saved"
+SP.TP.SETTINGS_NOT_SAVED="Template configuration could not been saved. %s"
 
 SP.FM.SHOW_PLACEHOLDER="Show Placeholder"
 SP.FM.URL.NOFOLLOW="Add nofollow"
