added template specific settings to default3 template

--- a/Site/changelog.txt
+++ b/Site/changelog.txt
@@ -44,6 +44,7 @@ Legend:
     (+) Nofollow attribute for url field
     (+) Possibility to switch the field label off in entry form
     (+) Possibility to add the label as placeholder into the input element for inbox, textarea (not Wysiwyg), email and url fields
+    (+) Template specific settings
 
     (!) Template styles from SobiPro.css moved to template's css file
     (!) New tree icons
