--- a/Site/changelog.txt
+++ b/Site/changelog.txt
@@ -45,6 +45,7 @@ Legend:
     (+) Possibility to switch the field label off in entry form
     (+) Possibility to add the label as placeholder into the input element for inbox, textarea (not Wysiwyg), email and url fields
     (+) Template specific settings
+    (+) Language installer for templates
 
     (!) Template styles from SobiPro.css moved to template's css file
     (!) New tree icons
