--- a/Site/changelog.txt
+++ b/Site/changelog.txt
@@ -46,6 +46,7 @@ Legend:
     (+) Possibility to add the label as placeholder into the input element for inbox, textarea (not Wysiwyg), email and url fields
     (+) Template specific settings
     (+) Language installer for templates
+    (+) Definition file for used icons
 
     (!) Template styles from SobiPro.css moved to template's css file
     (!) New tree icons
