--- a/Site/usr/locale/adm/en-GB.com_sobipro.ini
+++ b/Site/usr/locale/adm/en-GB.com_sobipro.ini
@@ -29,13 +29,12 @@ SP.TP.SETTINGS_LISTING="Listing View Settings"
 SP.TP.CONFIG_SITE_TITLE="Template Settings of 'var:[template]'"
 SP.TP.SETTINGS_SAVED="Template configuration has been saved."
 SP.TP.SETTINGS_NOT_SAVED="Template configuration could not been saved. %s"
-
+SP.FM.DEFAULT_VALUE="Default Value"
 SP.FM.SHOW_PLACEHOLDER="Show Placeholder"
 SP.FM.URL.NOFOLLOW="Add nofollow"
 SP.TB.COMPILESAVE="Compile & Save"
 SP.TB.COMPILE="Compile"
 SP.TP.LESS_FILE_COMPILED="Less file has been sucessfully compiled and stored in %s."
-
 SP.SECN.CFG.LOAD_ICONS_FONTS="Load Icon Fonts"
 SP.SECN.CFG.ICONS_FONT_AWESOME_3="Font Awesome 3"
 SP.SECN.CFG.ICONS_FONT_AWESOME_3_2="Font Awesome 3 (2x)"
@@ -47,11 +46,9 @@ SP.SECN.CFG.ICONS_FONT_AWESOME_4_4="Font Awesome 4 (4x)"
 SP.SECN.CFG.ICONS_FONT_AWESOME_4_5="Font Awesome 4 (5x)"
 SP.SECN.CFG.ICONS_MATERIAL="Google's Material Icons"
 SP.SECN.CFG.ICONS_FONT_AWESOME_3_LOCAL="Font Awesome 3 local (default)"
-
 SP.OPT_FONTS_ICONS="Font Icons"
 SP.CAT.USE_ICON_FONT="Use Icons Font"
 SP.CAT.ICON_FONT_ADD_CLASS="Add Font Class"
-
 
 SP.FM.META_SEPARATOR="Description Separator"
 SP.FM.UPLOAD_DEPENDENCY_PREVENT_PARENTS="Allow Selecting Parent"
