New default template (Part 8)

--- a/Site/usr/locale/adm/en-GB.SpTpl.default3.ini
+++ b/Site/usr/locale/adm/en-GB.SpTpl.default3.ini
@@ -1,11 +1,12 @@
+; @version: $Id$
 ; @package: SobiPro Component for Joomla!
 
 ; @author
 ; Name: Sigrid Suski & Radek Suski, Sigsiu.NET GmbH
 ; Email: sobi[at]sigsiu.net
-; Url: https://www.Sigsiu.NET
+; Url: http://www.Sigsiu.NET
 
-; @copyright Copyright (C) 2006 - 2015 Sigsiu.NET GmbH (https://www.sigsiu.net). All rights reserved.
+; @copyright Copyright (C) 2006 - 2015 Sigsiu.NET GmbH (http://www.sigsiu.net). All rights reserved.
 ; @license GNU/GPL Version 3
 ; This program is free software: you can redistribute it and/or modify it under the terms of the GNU General Public License version 3
 ; as published by the Free Software Foundation, and under the additional terms according section 7 of GPL v3.
@@ -14,16 +15,15 @@
 ; This program is distributed in the hope that it will be useful, but WITHOUT ANY WARRANTY; without even the implied warranty of
 ; MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. See the GNU General Public License for more details.
 
+SP.TP.CONFIG.ENTRY_CSS_CLASS="Entry form class"
+SP.TP.CONFIG.ENTRY_CSS_CLASS_INLINE="inline"
+SP.TP.CONFIG.ENTRY_CSS_CLASS_HORIZONTAL="horizontal"
+SP.TP.CONFIG.ENTRY_STAR="Add 'required' star"
+SP.TP.CONFIG.ENTRY_HELPPOSITION="Description position"
+SP.TP.CONFIG.ENTRY_HELPPOSITION_POPUP="popup"
+SP.TP.CONFIG.ENTRY_HELPPOSITION_ABOVE="above"
+SP.TP.CONFIG.ENTRY_HELPPOSITION_BELOW="below"
+SP.TP.CONFIG.LST_ENTRIESINLINE="Entries (number) per line"
+SP.TP.CONFIG.LST_ENTRIESLIMIT="Entries (number) per page"
+SP.TP.CONFIG.LST_RECURSIVE="Entries recursive"
 
-[general]
-template_type = "xslt"
-output = xml
-entries_limit = 5
-entries_recursive = true
-categories_limit = 0
-entries_ordering = "createdTime.desc"
-
-[output]
-header = "Content-Type: application/xml; charset=utf-8"
-close = true
-clear = true
