--- a/Site/usr/locale/adm/en-GB.com_sobipro.ini
+++ b/Site/usr/locale/adm/en-GB.com_sobipro.ini
@@ -15,17 +15,14 @@
 ; This program is distributed in the hope that it will be useful, but WITHOUT ANY WARRANTY; without even the implied warranty of
 ; MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. See the GNU General Public License for more details.
 
-SP.TP.CONFIG.ENTRY_CSS_CLASS="Entry form class"
-SP.TP.CONFIG.ENTRY_CSS_CLASS_INLINE="inline"
-SP.TP.CONFIG.ENTRY_CSS_CLASS_HORIZONTAL="horizontal"
-SP.TP.CONFIG.ENTRY_STAR="Add 'required' star"
-
 
 SP.TP.SETTINGS="General Settings"
 SP.TP.SETTINGS_ENTRY="Entry Form Settings"
 SP.TP.SETTINGS_SEARCH="Search Form Settings"
 SP.TP.SETTINGS_DETAILS="Details View Settings"
 SP.TP.SETTINGS_LISTING="Listing View Settings"
+SP.TP.SETTINGS_SECTION="Section View Settings"
+SP.TP.SETTINGS_CATEGORY="Category View Settings"
 SP.TP.CONFIG_SITE_TITLE="Template Settings of 'var:[template]'"
 SP.TP.SETTINGS_SAVED="Template configuration has been saved."
 SP.TP.SETTINGS_NOT_SAVED="Template configuration could not been saved. %s"
