--- a/Site/changelog.txt
+++ b/Site/changelog.txt
@@ -48,6 +48,7 @@ Legend:
     (+) Language installer for templates
     (+) Definition file for used icons
     (+) Default values for inbox, textarea, select list, multiple select list, checkbox group, email and url fields
+    (+) Highlighting search keywords in the search results
 
     (!) Template styles from SobiPro.css moved to template's css file
     (!) New tree icons
