(#) Preventing "multiple select list" as a search method while dependency option is enabled

--- a/Site/changelog.txt
+++ b/Site/changelog.txt
@@ -85,6 +85,7 @@ Legend:
     (#) Permission "to access any unpublished entry" is being overridden by the permission to access own unpublished entries (Issue #1439)
     (#) Information messages don't appear on redirection to non-SobiPro URLs (Issue #1366)
     (#) Second search ordering by counter doesn't work (Issue #1495)
+    (#) Preventing "multiple select list" as a search method while dependency option is enabled
 
 
 -------------------
