--- a/Site/usr/locale/site/en-GB.com_sobipro.err.ini
+++ b/Site/usr/locale/site/en-GB.com_sobipro.err.ini
@@ -20,6 +20,7 @@
 ; $Author: SobiPro Translation Team at Transifex
 
 SP.IMG_FIELD_RESIZE_NO_SIZE="You enabled resize or crop option but you didn't provide the width and/or height"
+SP.SELECT_FIELD_MULTIPLE_DEPENDENCY="You cannot set the Search Method to multiple select list while dependency option is enabled"
 
 SP.TP.LESS_FILE_NOT_COMPILED="Could not compile LESS file. %s"
 
