(#) rGetChilds method limited to entries only

--- a/Site/changelog.txt
+++ b/Site/changelog.txt
@@ -86,6 +86,7 @@ Legend:
     (#) Information messages don't appear on redirection to non-SobiPro URLs (Issue #1366)
     (#) Second search ordering by counter doesn't work (Issue #1495)
     (#) Preventing "multiple select list" as a search method while dependency option is enabled
+    (#) rGetChilds method limited to entries only
 
 
 -------------------
