--- a/Site/changelog.txt
+++ b/Site/changelog.txt
@@ -49,6 +49,7 @@ Legend:
     (+) Definition file for used icons
     (+) Default values for inbox, textarea, select list, multiple select list, checkbox group, email and url fields
     (+) Highlighting search keywords in the search results
+    (+) Possibility to override input fields renderer in the template
 
     (!) Template styles from SobiPro.css moved to template's css file
     (!) New tree icons
