New default template (Part 10)

--- a/Site/usr/locale/adm/en-GB.com_sobipro.ini
+++ b/Site/usr/locale/adm/en-GB.com_sobipro.ini
@@ -16,7 +16,7 @@
 ; MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. See the GNU General Public License for more details.
 
 
-SP.SECN.CFG.SEARCH_HIGHLIGHT="Highlight keyword in the search"
+SP.TP.SETTINGS_SEARCH_HIGHLIGHT="Highlight keywords in search"
 SP.TP.SETTINGS="General Settings"
 SP.TP.SETTINGS_ENTRY="Entry Form Settings"
 SP.TP.SETTINGS_SEARCH="Search Form Settings"
