--- a/Site/usr/locale/adm/en-GB.com_sobipro.ini
+++ b/Site/usr/locale/adm/en-GB.com_sobipro.ini
@@ -16,6 +16,8 @@
 ; MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. See the GNU General Public License for more details.
 
 
+SP.FM.INFORMATION="Information"
+SP.FM.INFORMATION_OUT="Output"
 SP.TP.SETTINGS_SEARCH_HIGHLIGHT="Highlight keywords in search"
 SP.TP.SETTINGS="General Settings"
 SP.TP.SETTINGS_ENTRY="Entry Form Settings"
