New default template (Part 12)

--- a/Site/usr/locale/adm/en-GB.SpTpl.default3.ini
+++ b/Site/usr/locale/adm/en-GB.SpTpl.default3.ini
@@ -15,6 +15,20 @@
 ; This program is distributed in the hope that it will be useful, but WITHOUT ANY WARRANTY; without even the implied warranty of
 ; MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. See the GNU General Public License for more details.
 
+SP.TP.SETTINGS_GENERAL="General Settings"
+SP.TP.CONFIG.CSS="Less/CSS"
+SP.TP.CONFIG.CSS_COLOUR="Colour theme"
+SP.TP.CONFIG.CSS_EDGE="Edge design"
+SP.TP.CONFIG.APPS="Applications"
+SP.TP.CONFIG.APPS_REVIEWSTAR="Reviews & Ratings star colour"
+SP.TP.CONFIG.RSS="RSS Feeds"
+SP.TP.CONFIG.ENTRIES="Entries"
+SP.TP.CONFIG.ENTRIES_NOIMG="Show 'no image' placeholder"
+SP.TP.CONFIG.ENTRIES_IMGSIZESMALL="vCard image width"
+SP.TP.CONFIG.ENTRIES_IMGSIZEBIG="details view image width"
+
+
+SP.TP.SETTINGS_ENTRY="Entry Form Settings"
 SP.TP.CONFIG.ENTRY_CSS_CLASS="Entry form class"
 SP.TP.CONFIG.ENTRY_CSS_CLASS_INLINE="inline"
 SP.TP.CONFIG.ENTRY_CSS_CLASS_HORIZONTAL="horizontal"
@@ -23,7 +37,17 @@ SP.TP.CONFIG.ENTRY_HELPPOSITION="Description position"
 SP.TP.CONFIG.ENTRY_HELPPOSITION_POPUP="popup"
 SP.TP.CONFIG.ENTRY_HELPPOSITION_ABOVE="above"
 SP.TP.CONFIG.ENTRY_HELPPOSITION_BELOW="below"
+
+SP.TP.SETTINGS_SEARCH="Search Form Settings"
+SP.TP.SETTINGS_DETAILS="Details View Settings"
+
+SP.TP.SETTINGS_VIEW="View Settings"
+SP.TP.CONFIG.SECTION="Section View"
+SP.TP.CONFIG.CAT="Category View"
+SP.TP.CONFIG.LIST="Listing View"
 SP.TP.CONFIG.LST_ENTRIESINLINE="Entries (number) per line"
 SP.TP.CONFIG.LST_ENTRIESLIMIT="Entries (number) per page"
 SP.TP.CONFIG.LST_RECURSIVE="Entries recursive"
+SP.TP.CONFIG.LST_ORDERING="Entries ordering"
+
 
