--- a/Site/usr/locale/adm/en-GB.com_sobipro.ini
+++ b/Site/usr/locale/adm/en-GB.com_sobipro.ini
@@ -16,21 +16,10 @@
 ; MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. See the GNU General Public License for more details.
 
 
-SP.FMN.CONFIG_GENERAL="General Settings"
-SP.FMN.FIELD_VIEW="View Settings"
-SP.FMN.FIELD_SEC="Section View"
-SP.FMN.FIELD_CAT="Category View"
-SP.FMN.FIELD_LIST="Listing View"
-SP.FMN.FIELD_CSS="Less/CSS"
-SP.FMN.FIELD_RSS="RSS Settings"
-SP.FMN.FIELD_APPS="Applications"
 SP.FM.INFORMATION="Information"
 SP.FM.INFORMATION_OUT="Output"
+SP.TP.SETTINGS="Template Settings"
 SP.SECN.CFG.SEARCH_HIGHLIGHT="Highlight keywords"
-SP.TP.SETTINGS="General Settings"
-SP.TP.SETTINGS_ENTRY="Entry Form Settings"
-SP.TP.SETTINGS_SEARCH="Search Form Settings"
-SP.TP.SETTINGS_DETAILS="Details View Settings"
 SP.TP.CONFIG_SITE_TITLE="Template Settings of 'var:[template]'"
 SP.TP.SETTINGS_SAVED="Template configuration has been saved."
 SP.TP.SETTINGS_NOT_SAVED="Template configuration could not been saved. %s"
