New default template (Part 13)

--- a/Site/usr/locale/adm/en-GB.SpTpl.default3.ini
+++ b/Site/usr/locale/adm/en-GB.SpTpl.default3.ini
@@ -16,17 +16,13 @@
 ; MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. See the GNU General Public License for more details.
 
 SP.TP.SETTINGS_GENERAL="General Settings"
-SP.TP.CONFIG.CSS="Less/CSS"
+SP.TP.CONFIG.CSS="Template Style"
 SP.TP.CONFIG.CSS_COLOUR="Colour theme"
 SP.TP.CONFIG.CSS_EDGE="Edge design"
-SP.TP.CONFIG.APPS="Applications"
-SP.TP.CONFIG.APPS_REVIEWSTAR="Reviews & Ratings star colour"
 SP.TP.CONFIG.RSS="RSS Feeds"
 SP.TP.CONFIG.ENTRIES="Entries"
 SP.TP.CONFIG.ENTRIES_NOIMG="Show 'no image' placeholder"
 SP.TP.CONFIG.ENTRIES_IMGSIZESMALL="vCard image width"
-SP.TP.CONFIG.ENTRIES_IMGSIZEBIG="details view image width"
-
 
 SP.TP.SETTINGS_ENTRY="Entry Form Settings"
 SP.TP.CONFIG.ENTRY_CSS_CLASS="Entry form class"
@@ -45,9 +41,14 @@ SP.TP.SETTINGS_VIEW="View Settings"
 SP.TP.CONFIG.SECTION="Section View"
 SP.TP.CONFIG.CAT="Category View"
 SP.TP.CONFIG.LIST="Listing View"
-SP.TP.CONFIG.LST_ENTRIESINLINE="Entries (number) per line"
-SP.TP.CONFIG.LST_ENTRIESLIMIT="Entries (number) per page"
+SP.TP.CONFIG.LST_ENTRIESINLINE="Entries per line"
+SP.TP.CONFIG.LST_ENTRIESLIMIT="Entries per page"
 SP.TP.CONFIG.LST_RECURSIVE="Entries recursive"
 SP.TP.CONFIG.LST_ORDERING="Entries ordering"
 
+SP.TP.SETTINGS_APPS="Applications"
+SP.TP.CONFIG.APPRAR="Review & Rating Application"
+SP.TP.CONFIG.APPRAR_STAR="Star colour"
+SP.TP.CONFIG.APPCOL="Collection Application"
+SP.TP.CONFIG.APPCOL_NO="Entries per page"
 
