(!) Set image crop function off by default

--- a/Site/changelog.txt
+++ b/Site/changelog.txt
@@ -61,6 +61,7 @@ Legend:
     (!) Layout improvements for range search
     (!) Default view templates of SobiPro functionality not longer selectable in Joomla! menu manager
     (!) SobiPro section view functionality in Joomla! menu manager moved to first position
+    (!) Set image crop function off by default
 
     (-) Category icons removed
 
