New default template (Part 14)

--- a/Site/usr/locale/adm/en-GB.SpTpl.default3.ini
+++ b/Site/usr/locale/adm/en-GB.SpTpl.default3.ini
@@ -1,4 +1,3 @@
-; @version: $Id$
 ; @package: SobiPro Component for Joomla!
 
 ; @author
@@ -14,6 +13,7 @@
 
 ; This program is distributed in the hope that it will be useful, but WITHOUT ANY WARRANTY; without even the implied warranty of
 ; MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. See the GNU General Public License for more details.
+
 
 SP.TP.SETTINGS_GENERAL="General Settings"
 SP.TP.CONFIG.CSS="Template Style"
@@ -51,4 +51,6 @@ SP.TP.CONFIG.APPRAR="Review & Rating Application"
 SP.TP.CONFIG.APPRAR_STAR="Star colour"
 SP.TP.CONFIG.APPCOL="Collection Application"
 SP.TP.CONFIG.APPCOL_NO="Entries per page"
+SP.TP.CONFIG.APPPROFILE="Profile Field"
+SP.TP.CONFIG.APPPROFILE_DV="Entries per line in details view"
 
