XMLFields in administrator view fixed

--- a/Site/changelog.txt
+++ b/Site/changelog.txt
@@ -94,6 +94,7 @@ Legend:
     (#) Preventing "multiple select list" as a search method while dependency option is enabled
     (#) rGetChilds method limited to entries only
     (#) Static call into JSite::getMenu() has been removed
+    (#) Leveraging Joomla! files' protection (Issue #1506)
 
 
 -------------------
