New default template (Part 15)

--- a/Site/usr/locale/adm/en-GB.com_sobipro.ini
+++ b/Site/usr/locale/adm/en-GB.com_sobipro.ini
@@ -16,6 +16,7 @@
 ; MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. See the GNU General Public License for more details.
 
 
+SP.SECN.CFG.SETTINGS_BOOTSTRAP3STYLES="Bootstrap 3 styles"
 SP.FM.INFORMATION="Information"
 SP.FM.INFORMATION_OUT="Output"
 SP.TP.SETTINGS="Template Settings"
@@ -521,7 +522,7 @@ SP.SECN.CFG.SECTION_NAME="Name"
 SP.SECN.ADD_SECTION_ALIAS="Alias"
 SP.SECN.CFG.SECTION_DESCRIPTION="Description"
 SP.SECN.CFG.PUBLISHING="Publishing"
-SP.SECN.CFG.SETTINGS_BOOTSTRAP_DISABLED="Prevent Bootstrap Loading"
+SP.SECN.CFG.SETTINGS_BOOTSTRAP_DISABLED="Prevent loading Bootstrap 2 "
 SP.SECN.CFG.SETTINGS_ADVANCED="Advanced Settings"
 
 ;; Template
