--- a/Site/usr/locale/adm/en-GB.SpTpl.default3.ini
+++ b/Site/usr/locale/adm/en-GB.SpTpl.default3.ini
@@ -45,6 +45,7 @@ SP.TP.CONFIG.LST_ENTRIESINLINE="Entries per line"
 SP.TP.CONFIG.LST_ENTRIESLIMIT="Entries per page"
 SP.TP.CONFIG.LST_RECURSIVE="Entries recursive"
 SP.TP.CONFIG.LST_ORDERING="Entries ordering"
+SP.TP.CONFIG.LST_COUNT="Count entries"
 
 SP.TP.SETTINGS_APPS="Applications"
 SP.TP.CONFIG.APPRAR="Review & Rating Application"
