--- a/Site/usr/locale/site/en-GB.com_sobipro.ini
+++ b/Site/usr/locale/site/en-GB.com_sobipro.ini
@@ -231,8 +231,8 @@ SP.MN.ADD_ENTRY="Add Entry"
 ;=========
 SP.CC.SELECT_PARENT_CAT="Select parent category"
 SP.CC.CURRENT_SELECTED_CATS="Currently selected categories"
-SP.CC.ADD_BT="Add Category &gt;&gt;"
-SP.CC.DEL_BT="&lt;&lt; Remove Category"
+SP.CC.ADD_BT="Add Category"
+SP.CC.DEL_BT="Remove Category"
 SP.CC.SAVE_BT="Save"
 SP.CC.JMENU_DESC="As an option you can select a category which you would like to link to"
 SP.CC.JMENU_SAVE="Save selection"
