New default3 template for Bootstrap 3 (Part 2) Category layout in backend corrected

--- a/Site/usr/locale/site/en-GB.com_sobipro.ini
+++ b/Site/usr/locale/site/en-GB.com_sobipro.ini
@@ -241,8 +241,8 @@ SP.CC.CURRENT_SELECTED_PATH="Currently selected path"
 ;=========
 ; Templates
 ;=========
-SP.TP.REMOVE_CATEGORY_BT="&lt;&lt; Remove Category"
-SP.TP.ADD_CATEGORY_BT="Add Category &gt;&gt;"
+SP.TP.REMOVE_CATEGORY_BT="Remove Category"
+SP.TP.ADD_CATEGORY_BT="Add Category"
 SP.TP.SAVE_BT="Close"
 SP.TP.CAT_BOX="Category:"
 SP.TP.SEL_CAT_BOX="Select Categories:"
