(!) New repository server and certificate

--- a/Site/changelog.txt
+++ b/Site/changelog.txt
@@ -1,23 +1,20 @@
 Changelog for SobiPro Component
 ===================================================
-@version: $Id$
 @package: SobiPro Component for Joomla!
 
 @author
 Name: Sigrid Suski & Radek Suski, Sigsiu.NET GmbH
 Email: sobi[at]sigsiu.net
-Url: http://www.Sigsiu.NET
+Url: https://www.Sigsiu.NET
 
-@copyright Copyright (C) 2006 - 2015 Sigsiu.NET GmbH (http://www.sigsiu.net). All rights reserved.
+@copyright Copyright (C) 2006 - 2015 Sigsiu.NET GmbH (https://www.sigsiu.net). All rights reserved.
 @license GNU/GPL Version 3
 This program is free software: you can redistribute it and/or modify it under the terms of the GNU General Public License version 3
 as published by the Free Software Foundation, and under the additional terms according section 7 of GPL v3.
-See http://www.gnu.org/licenses/gpl.html and http://sobipro.sigsiu.net/licenses.
+See http://www.gnu.org/licenses/gpl.html and https://www.sigsiu.net/licenses.
 
 This program is distributed in the hope that it will be useful, but WITHOUT ANY WARRANTY; without even the implied warranty of
 MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the GNU General Public License for more details.
-
-$Date$
 
 Legend:
  (*) - Security Fix
@@ -53,7 +50,7 @@ Legend:
     (+) New core field 'Information' to output HTML text in entry form and/or DV and/or vCard
     (+) Setting to switch HTML output format from Bootstrap 2 to Bootstrap 3
     (+) Implementation of Bootstrap 3 HTML output (e.g. modals, grids, forms, input fields)
-    (+) Adjustable search field width for category, select, multiselect and inbox fields
+    (+) Adjustable search field width for category, select, multiselect and inbox fields (span, col)
 
     (!) Template styles from SobiPro.css moved to template's css file
     (!) New tree icons
@@ -68,6 +65,7 @@ Legend:
     (!) Header plugin version updated
     (!) Field width settings changed from px to Bootstrap classes (span, col)
     (!) SigsiuTree is responsive now
+    (!) New repository server and certificate
 
     (-) Category icons removed
 
