(!) Intelligence test refined. Was to hard to get it.

--- a/Site/usr/locale/site/en-GB.com_sobipro.err.ini
+++ b/Site/usr/locale/site/en-GB.com_sobipro.err.ini
@@ -1,12 +1,11 @@
-; @version: $Id$
 ; @package: SobiPro Component for Joomla!
 
 ; @author
 ; Name: Sigrid Suski & Radek Suski, Sigsiu.NET GmbH
 ; Email: sobi[at]sigsiu.net
-; Url: http://www.Sigsiu.NET
+; Url: https://www.Sigsiu.NET
 
-; @copyright Copyright (C) 2006 - 2015 Sigsiu.NET GmbH (http://www.sigsiu.net). All rights reserved.
+; @copyright Copyright (C) 2006 - 2015 Sigsiu.NET GmbH (https://www.sigsiu.net). All rights reserved.
 ; @license GNU/GPL Version 3
 ; This program is free software: you can redistribute it and/or modify it under the terms of the GNU General Public License version 3
 ; as published by the Free Software Foundation, and under the additional terms according section 7 of GPL v3.
@@ -15,17 +14,12 @@
 ; This program is distributed in the hope that it will be useful, but WITHOUT ANY WARRANTY; without even the implied warranty of
 ; MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. See the GNU General Public License for more details.
 
-; $Date$
-; $Revision$
-; $Author: SobiPro Translation Team at Transifex
 
-SP.IMG_FIELD_RESIZE_NO_SIZE="You enabled resize or crop option but you didn't provide the width and/or height"
-SP.SELECT_FIELD_MULTIPLE_DEPENDENCY="You cannot set the Search Method to multiple select list while dependency option is enabled"
-
+SP.IDENTIFIER_EXPECTED_DESC="Please take care of what you are selecting! Do not mix functions for categories and entries."
+SP.IMG_FIELD_RESIZE_NO_SIZE="You enabled the resize or crop option, but you didn't provide the width and/or height."
+SP.SELECT_FIELD_MULTIPLE_DEPENDENCY="You cannot set the search method to multiple select list while dependency option is enabled."
 SP.TP.LESS_FILE_NOT_COMPILED="Could not compile LESS file. %s"
-
-SP.SELECT_FIELD_NO_PARENT="Please select a valid option in the \"%s\" field"
-
+SP.SELECT_FIELD_NO_PARENT="Please select a valid option in the \"%s\" field."
 SP.DELETE_CAT_NO_ID="No categories to delete selected."
 
 SP.FIELD_FIXED_CID_MISSING="The category field in this configuration requires at least one category id."
