--- a/Site/changelog.txt
+++ b/Site/changelog.txt
@@ -26,6 +26,12 @@ Legend:
  (!) - Change
 
 -------------------
+1.2.1 ()
+-------------------
+
+    (#) Missing default template configuration files added
+
+-------------------
 1.2 (28 October 2015)
 -------------------
 
