--- a/Site/usr/locale/adm/en-GB.SpTpl.default3.ini
+++ b/Site/usr/locale/adm/en-GB.SpTpl.default3.ini
@@ -19,6 +19,7 @@ SP.TP.SETTINGS_GENERAL="General Settings"
 SP.TP.CONFIG.CSS="Template Style"
 SP.TP.CONFIG.CSS_COLOUR="Colour theme"
 SP.TP.CONFIG.CSS_EDGE="Edge design"
+SP.TP.CONFIG.HIDECATEGORIES="Hide Categories"
 SP.TP.CONFIG.RSS="RSS Feeds"
 SP.TP.CONFIG.ENTRIES="Entries"
 SP.TP.CONFIG.ENTRIES_NOIMG="Show 'no image' placeholder"
